# black_sapphire

./: .gitmodules  .travis.yml  CMakeLists.txt  Makefile_dbg  conanfile.txt  main.cpp  remotes.txt
Resources/Characters/Arduin/: Arduin.xml  baseanim#.anim
Resources/Characters/Brimwin/: BrimwinClone.xml
Resources/Characters/Cow/: cow.xml~
Resources/Characters/Goblin/: goblin.xml~
Resources/Characters/Imp/: Arduin.xml~  imp.xml  imp.xml~
Resources/Characters/Pig/: pig.xml~
Resources/Characters/Thaleia/: Thaleia.xml
Resources/Items/Chain/: chain.anim
Resources/Items/Chromatic Orb/: Chromatic_Orb_large.anim  Chromatic_Orb_large.anim~
Resources/Items/Corset/: corset.anim
Resources/Items/GoblinDagger/: goblin_dagger.xml
Resources/Items/GoblinSword/: goblin_dagger.xml
Resources/Items/Pitchfork/: pitchfork.xml~
Resources/Items/Potion/: Potion.xml
Resources/Items/Quarterstaff/: Quarterstaff.xml
Resources/Items/Robes/: robes.xml
Resources/Items/Spear/: spear.xml
Resources/Items/Wand/: wand.xml
build_conan/: graph_info.json
conan_config/: remotes.txt
src/GameEngine/: Makefile_OG
src/GameEngine/src/: Game.h  XmlBuilder.cpp  XmlBuilder.h  main.cpp
src/GameEngine/src/utility/: Die.cpp  Die.h  InfoSurface.cpp  InfoSurface.h  OptionsMenu.cpp  OptionsMenu.h  ScriptConsole.cpp  ScriptConsole.h  ScriptHandler.cpp  ScriptHandler.h  Stringio.cpp  Stringio.h  Tokenizer.cpp  Tokenizer.h  sconsole.cpp  sconsole.h
src/Resources/Characters/Brimwin/: Brimwin.xml
src/Resources/Characters/Goblin/: goblin.xml
src/Resources/Items/Arrow/: Arrow.xml  (+2 more)
(+83 files in other folders)
